# habit-tracker-app

./: .gitignore  SYSTEM_DESIGN.md
backend/: README.md  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/scripts/: RUN_TESTS.md  run_test.sh
backend/tests/: test_auth.py
design-diagrams/: QUICK_GUIDE_DIAGRAM.md  system_design_diagram.py
frontend/src/: App.tsx  api.ts
frontend/src/pages/: Auth.tsx  Habits.tsx  Login.tsx  Register.tsx
